Fix margin-content and miniature thumbnail width on mobile, fix media queries for tables above lg breakpoint

--- a/client/src/app/shared/forms/markdown-textarea.component.scss
+++ b/client/src/app/shared/forms/markdown-textarea.component.scss
@@ -15,7 +15,7 @@ $input-border-radius: 3px;
       @include peertube-textarea(100%, 150px);
 
       background-color: var(--textareaBackgroundColor);
-      font-family: courier, monospace;
+      font-family: monospace;
       font-size: 13px;
       border-bottom: none;
       border-bottom-left-radius: unset;
