--- a/client/src/app/videos/+video-watch/video-watch.component.scss
+++ b/client/src/app/videos/+video-watch/video-watch.component.scss
@@ -551,7 +551,8 @@ my-video-comments {
 
 @media screen and (max-width: 600px) {
   .video-bottom {
-    margin: 20px 0 0 0 !important;
+    margin-top: 20px !important;
+    margin-bottom: 20px !important;
 
     .video-info {
       padding: 0;
